# oclRustVecadd

./: .gitignore  Cargo.toml
src/: clvecadd.rs  main.rs  math.rs  test.rs
src/clvecadd/: buffer.rs  exec.rs  setup.rs  traits.rs
src/opencl/vecadd/: vecadd.cl
src/test/: clvecadd_test.rs
