[package]
name = "clvecadd_cargo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencl3 = "0.9"
log = "0.4"
log4rs = "1.2"
half = "2.1"

[dependencies.num-traits]
version = "0.2"
default-features = false
features = ["libm"]
